[project]
name = "comfyui-filepathcreator"
description = "The ComfyUI-FilePathCreator is a custom node extension for ComfyUI designed to generate dynamic filenames based on user-defined parameters. This node helps streamline the process of creating organized and timestamped filenames, ideal for saving output files in a structured manner."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/HECer/ComfyUI-FilePathCreator"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-FilePathCreator"
Icon = ""
